--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,26 @@
-== README
+== Welcome to the MeetingPossum App
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+MeetingPossum is built on:
+ * Ruby 2.1.3
+ * Rails 4.2.0
+ * postgresql
+ * Hosted by heroku
+ *Code complexity and security monitoring by CodeClimate
 
-Things you may want to cover:
+{<img src="https://codeclimate.com/repos/54f4060a69568022d1003bba/badges/360719b07474f9bd95fc/gpa.svg" />}[https://codeclimate.com/repos/54f4060a69568022d1003bba/feed]
 
-* Ruby version
+== New Development Machine Install (Mac)
 
-* System dependencies
+1. Install the latest version of XCode
+2. Install the optional Command Line Tools in XCode
+3. Install the latest version of Homebrew: http://brew.sh/
+4. Install the latest version of RVM: https://rvm.io/
+5. Install Ruby from terminal: 'rvm install 2.1.3'
+6. Install posgtresql from terminal: 'brew install postgresql' and follow on screen instructions (very important)
+7. Create postgresql superuser postgres: 'createuser postgres -s'
+8. Clone the git repo in terminal: 'git clone git@github.com:rogergraves/meetingsurvey.git'
+9. Go into directory 'cd meetingsurvey' and run 'bundle'
+10. Set up the database through 'rake db:create'
+11. Run database migrations through 'rake db:migrate'
+12. Should be ready to roll: 'rails server'
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
